force-app/main/default/objects/leaseworks__Issuance__c/leaseworks__Issuance__c.object-meta.xml
<CustomObject>
    <description>Issuance Details</description>
    <label>Issuance</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issuances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>