force-app/main/default/objects/leaseworks__Issuance__c/fields/leaseworks__Principal__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Principal__c</fullName>
    <label>Principal Local Currency (mm)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>