force-app/main/default/objects/leaseworks__Issuance__c/fields/leaseworks__Y_Hidden_Isuance_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Isuance_Type__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Isuance Type</label>
    <type>Text</type>
</CustomField>