force-app/main/default/objects/leaseworks__Issuance__c/fields/leaseworks__Yield__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Yield__c</fullName>
    <label>Yield</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>