force-app/main/default/objects/leaseworks__Issuance__c/recordTypes/leaseworks__Bond_Issuance.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Bond_Issuance</fullName>
    <active>true</active>
    <label>Bond Issuance</label>
</RecordType>