force-app/main/default/objects/leaseworks__Issuance__c/recordTypes/leaseworks__Equity.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Equity</fullName>
    <active>true</active>
    <description>Equity</description>
    <label>Equity</label>
</RecordType>