force-app/main/default/objects/leaseworks__Issuance__c/recordTypes/leaseworks__Revolver.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Revolver</fullName>
    <active>true</active>
    <label>Revolver</label>
</RecordType>