force-app/main/default/objects/leaseworks__Issuance__c/recordTypes/leaseworks__Secured_Financing.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Secured_Financing</fullName>
    <active>true</active>
    <description>Secured Financing</description>
    <label>Secured Financing</label>
</RecordType>