force-app/main/default/objects/leaseworks__Issuance__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Issuance_Type__c</columns>
    <columns>leaseworks__Issuance_Date__c</columns>
    <columns>leaseworks__Maturity_Date__c</columns>
    <columns>leaseworks__Placement_Type__c</columns>
    <columns>leaseworks__Type__c</columns>
    <columns>leaseworks__Principal__c</columns>
    <columns>leaseworks__Price__c</columns>
    <columns>leaseworks__Collateral__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>